# statim-legacy

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  ast.txt  bnf.md  main  main.ll  test.cpp  todo.md
compiler/: .gitignore  statimc.cpp
compiler/ast/: Decl.h  Scope.h  Stmt.h
compiler/cgn/: cgn.cpp
compiler/codegen/: codegen.cpp
compiler/core/: CContext.h  Context.cpp  Logger.h  Token.h  ast.h  cctx.cpp  cctx.h  logger.cpp  logger.h  stack.h  symbol.h  token.h  tstream.cpp  tstream.h  util.h
compiler/include/ast/: Builder.h  Decl.h  Expr.h  Stmt.h  Unit.h
compiler/include/cgn/: codegen.h
compiler/include/core/: ASTContext.h  ASTVisitor.h  CContext.h  Logger.h  Type.h  Utils.h  symbol.h
compiler/include/sema/: ASTVisitor.h  Type.h
compiler/include/token/: Token.h  Tokenizer.h
compiler/lexer/: Tokenizer.h  tokenizer.cpp  tokenizer.h
compiler/lexer/test/: test_tokenizer.cpp
compiler/parser/: ast_print.cpp  decl.cpp  expr.cpp  parse.cpp  parse_expr.cpp  parse_stmt.cpp  parser.cpp  parser.h  print.cpp  stmt.cpp  to_string.cpp
compiler/pass/: passman.h
compiler/sema/: visitor.cpp
legacy/: pass_one.cpp  stmt.cpp
oldp/: parse.cpp  parse_expr.h
sample/: ast.txt  main.statim  sec.statim  tri.statim  util.statim  util.statimcc
samples/: ret_1.statim  ret_var_zero.statim  ret_zero.statim  s.statim
samples/integer/ret/: ret_1.statim  ret_var_0.statim  ret_var_1.statim
src/: .gitignore  ast.h  codegen.cpp  codegen.h  container.cpp  container.h  lexer.cpp  lexer.h  logger.cpp  logger.h  parser.cpp  parser.h  statim  statim.cpp  statim.ilk  statimc.cpp  statimc.cxx  token.h  tstream.cpp  tstream.h
src/codegen/: codegen.cpp
src/core/: container.cpp  logger.cpp  logger.cxx  tstream.cpp  tstream.cxx
src/include/: ast.h  cgn.h  codegen.h  container.h  lexer.h  logger.h  parse.h  parse_stmt.h  parser.h  register.h  token.h  write_obj.h
src/lex/: lexer.cpp  lexer.h  token.h  tstream.cpp  tstream.h
src/lexer/: lexer.cpp
src/parser/: parse.cxx  parse_expr.cxx  parse_stmt.cxx  parser.cpp
src/utils/: write_obj.cpp  write_obj.h
test/function/: main.sm  main.statim
